model_project_final.ipynb

--- a/model_project_final.ipynb
+++ b/model_project_final.ipynb
@@ -13,18 +13,7 @@
    "source": [
     "=======================================================\n",
     "\n",
-    "**Final Project**\n",
-    "\n",
-    "Group : 1\n",
-    "\n",
-    "Name :  \n",
-    "- Audrey Wanto as Data Engineer\n",
-    "\n",
-    "- Jeni Kasturi as Data Scientist\n",
-    "\n",
-    "- Taufiqurrahman as Data Analyst\n",
-    "\n",
-    "Batch : FTDS_BSD_2\n",
+    "**Project**\n",
     "\n",
     "Looking for the best prediction results using the Arima and Sarimax models in this database [Customer Subscription Data]('https://www.kaggle.com/datasets/gsagar12/dspp1/data')\n",
     "\n",
